# razbot2_description

./: CMakeLists.txt  package.xml
launch/: description.launch  display.launch  gazebo.launch
meshes/: wheel.stl  wheel_big.stl
robots/: razbot.urdf
urdf/: razbot2.urdf.xacro  wheel.urdf.xacro
urdf/razbot2_arm/: razbot2_arm.urdf.xacro
