<?xml version="1.0"?>
<package>
  <name>razbot2_description</name>
  <version>1.0.0</version>
  <description>Robot description for the RazBot2</description>

  <maintainer email="noobaca2@gmail.com">Devon Ash</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>
</package>
